added a logo and pages to the nav bar

--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
 
   <body>
     <header>
-      <h1></h1>
-      <nav></nav>
+      <nav>
+        <a href="http://127.0.0.1:3002/block-09/personal-website/index.html">
+          <img src="./Logo.png" alt="Alexia Moore Logo"/>
+        </a>
+        <a href="./index.html">Home</a>
+        <a href="./about-me.html">About</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
     </header>
 
     <main>
 
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
