added majority of conents to website w/ no finalized formatting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     </header>
 
     <main>
-
+      <h1>Alexia Moore</h1>
+      <img 
+        src="https://i.pinimg.com/736x/b8/70/c3/b870c35cf7e3a1f2beeea0e23908c8c1.jpg"
+        alt="headshot"/>
+      <h2>Web developer</h2>
+      <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
     </main>
     <footer>
 
