nevigation bar completed

--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,14 @@
     <header>
       <nav>
         <a href="http://127.0.0.1:3002/block-09/personal-website/index.html">
-          <img src="./Logo.png" alt="Alexia Moore Logo"/>
+          <img id="logo" src="./Logo.png" alt="Alexia Moore Logo"/>
         </a>
+        <div id="nav-links">
         <a href="./index.html">Home</a>
         <a href="./about-me.html">About</a>
         <a href="./portfolio.html">Portfolio</a>
         <a href="./contact.html">Contact</a>
+      </div>
       </nav>
     </header>
     <h1>Contact</h1>
