--- a/about-me.html
+++ b/about-me.html
@@ -9,16 +9,19 @@
 
   <body>
     <header>
-      <nav>
-        <a href="http://127.0.0.1:3002/block-09/personal-website/index.html">
-          <img src="./Logo.png" alt="Alexia Moore Logo"/>
-        </a>
-        <a href="./index.html">Home</a>
-        <a href="./about-me.html">About</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./contact.html">Contact</a>
-      </nav>
-    </header>
+      <header>
+        <nav>
+          <a href="http://127.0.0.1:3002/block-09/personal-website/index.html">
+            <img id="logo" src="./Logo.png" alt="Alexia Moore Logo"/>
+          </a>
+          <div id="nav-links">
+          <a href="./index.html">Home</a>
+          <a href="./about-me.html">About</a>
+          <a href="./portfolio.html">Portfolio</a>
+          <a href="./contact.html">Contact</a>
+        </div>
+        </nav>
+      </header>
     <main>
       <Section>
         <h1>About Me</h1>
