--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
       <div class="row">
       <div id="home" class="column">
       <h1>Alexia Moore</h1>
-      <h2>Web developer</h2>
+      <h2>Software Engineer</h2>
       <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
       </div>
       <div class="column" >   
-      <img id="homehead"
+      <img
         src="https://i.pinimg.com/736x/b8/70/c3/b870c35cf7e3a1f2beeea0e23908c8c1.jpg"
-        alt="headshot"/>
+        alt="headshot"/
+        class="column"
+        style="min-width: 450px;">
       </div>
     </main>
     <footer>
